--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "discord.js": "github:hydrabolt/discord.js#11.3-dev"
   },
   "dependencies": {
-    "electron": "^2.0.5",
     "electron-titlebar": "0.0.3"
+  },
+  "devDependencies": {
+    "electron": "^2.0.5"
   }
 }
