--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "build": {
     "directories": {
-      "files": ['js/*', 'build/*', '../js/*']
+      "files": ["js/*", "build/*", "../js/*"]
     }
   },
   "repository": {
