--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "test": "electron ."
   },
   "build": {
-    "directories": {
-      "files": ["js/*", "build/*", "../js/*"]
-    }
+      "files": ["js/*", "build/*", "../js/*"],
   },
   "repository": {
     "type": "git",
