--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "electron ."
   },
   "build": {
-      "files": ["js/*", "build/*", "../js/*"]
+      "files": ["js/*", "build/*", "../js/*"],
+      "extraFiles": ["js"]
   },
   "repository": {
     "type": "git",
